# pygmalion-doctor

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx
app/api/echo/: route.ts
app/api/triage/: route.ts
app/api/voice/respond/: route.ts
app/voice/: page.tsx
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
components/: CameraCapture.tsx  DIDPlaceholder.tsx  VoiceChat.tsx
frontend/: README.md
frontend/app/: globals.css  page.tsx
frontend/app/api/triage/: route.ts
frontend/components/: CameraCapture.tsx  DIDPlaceholder.tsx
lib/: didClient.ts  openaiClient.ts
