[project]
name = "pygmalion-doctor-backend"
version = "0.1.0"
description = "FastAPI backend for pygmalion-doctor"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "openai>=1.51",
]

[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.hatch.metadata]
allow-direct-references = true
